# midk

./: .gitignore  Cargo.toml  env  notes.md  readme.md  smprec.sh  todo.md
src/audiorec/: Cargo.toml
src/copypipe/: Cargo.toml
src/fcon/: Cargo.toml
src/ksmp/: Cargo.toml  generate_test.sh  test.json
src/ksmp/src/: lib.rs  polyman.rs  sample_db.rs
src/lsp/: Cargo.toml
src/mididump/: Cargo.toml
src/midifilter/: Cargo.toml
src/midinput/: Cargo.toml
src/midiuinput/: Cargo.toml
src/polysplit/: Cargo.toml
src/polysplit/src/: exsquare.rs  lib.rs  poly_host.rs  synth.rs  synth_generator.rs
src/smprec/: Cargo.toml  readme.md
src/synthwidget/: Cargo.toml
src/synthwidget/src/: filter.rs  lib.rs  osc.rs  seg.rs
src/toycmp/: Cargo.toml
src/toysynth/: Cargo.toml
src/usm/: Cargo.toml  readme.md
src/usm/src/: align.rs  content.rs  document.rs  event.rs  lib.rs  ume.rs
