cargo-features = ["workspace-inheritance"]

[workspace]
members = [
	"src/mididump",
	"src/lsp",
	"src/fcon",
	"src/ksmp",
	"src/audiorec",
	"src/smprec",
	"src/midiuinput",
	"src/midifilter",
	"src/copypipe",
	"src/polysplit",
	"src/synthwidget",
	"src/usm",
	"src/toycmp",
]

[workspace.dependencies]
jack = "0.10"

[workspace.dependencies.aarg]
git = "http://localhost:8080/git/asrcpq/aarg.git"
